# Surgical_Robotic_Arm_Robosoc

./: readme.md
code/: Stepper_control.ino
code/install/surgical_robotic_arm/lib/surgical_robotic_arm/: inverse_kinematics
code/install/surgical_robotic_arm/share/surgical_robotic_arm/: package.ps1  package.sh  package.zsh
code/log/: latest_build
code/src/surgical_robotic_arm/: package.xml  setup.cfg
code/src/surgical_robotic_arm/launch/: display.launch.py
code/src/surgical_robotic_arm/urdf/: robotic_arm.urdf
install/: local_setup.sh  setup.sh
install/surgical_robotic_arm/share/surgical_robotic_arm/: package.bash  package.dsv  package.xml
install/surgical_robotic_arm/share/surgical_robotic_arm/launch/: display.launch.py
install/surgical_robotic_arm/share/surgical_robotic_arm/urdf/: robotic_arm.urdf
src/scripts/: inverse_kinematics.py
src/surgical_robotic_arm/: setup.py
