<?xml version="1.0"?>
<package format="3">
  <name>surgical_robotic_arm</name>
  <version>0.0.1</version>
  <description>Basic robotic arm simulation with IK</description>
  <maintainer email="you@example.com">Mr Ranjan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
